fix a overflow

--- a/blocks/plcontactsate/__warning/contacts__warning.css
+++ b/blocks/plcontactsate/__warning/contacts__warning.css
@@ -1,5 +1,5 @@
 .contacts__warning {
-  width: max-content;
+  width: 80vw;
   text-align: center;
   color: rgba(128, 128, 128, 0.5);
   font-size: 10px;
